
        CHANGES IN spatstat.explore VERSION 3.2-3.007

OVERVIEW

    o Integration of functions.

    o Minor improvements and bug fixes.

    o spatstat.explore no longer suggests package 'maptools'.
    
NEW FUNCTIONS

    o integral.fv
    Compute the integral of a function.

SIGNIFICANT USER-VISIBLE CHANGES

    o density.ppp
    New argument 'sameas'.

BUG FIXES

    o quantile.density
    Crashed if `probs` contained NA values and `names=FALSE`.
    Fixed.

    o bw.smoothppp
    Crashed if every point in 'X' was duplicated.
    Fixed.

        CHANGES IN spatstat.explore VERSION 3.2-3

OVERVIEW

    o Improvements to envelope methods.
    
    o Suppress warning messages from density.default.
    
    o Minor improvements and bug fixes.

NEW FUNCTIONS

    o compileCDF
    Low level utility for calculating cumulative distribution function
    of distance variable. 

SIGNIFICANT USER-VISIBLE CHANGES

    o circdensity
    Improved output of 'print' method

    o envelope
    All methods for `envelope' now accept a summary function 
    in which the function argument is not named 'r'.
    This includes functions such as `transect.im' and `roc'.
    
    o plot.bermantest
    Improved layout for plots of Berman's Z2 test.

    o plot.fv
    New argument 'clip.xlim'.

    o circdensity
    Suppress annoying warning messages from density.default.
    
    o compileK, compilepcf
    Suppress annoying warning messages from density.default.
    
    o rhohat
    Suppress annoying warning messages from density.default.
    
BUG FIXES

    o envelope methods
    Results were malformed if the name of the function argument was not "r". 
    Fixed.
    
        CHANGES IN spatstat.explore VERSION 3.2-1

OVERVIEW

    o Internal bug fixes.


        CHANGES IN spatstat.explore VERSION 3.2-0

OVERVIEW

    o We thank Jonatan Gonzalez for contributions.
    
    o Changed the calculation of standard errors in density.ppp and relrisk.ppp.
