@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.2-3.007
-Date: 2023-10-08
+Version: 3.2-3.008
+Date: 2023-10-17
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
